import proguard.gradle.ProGuardTask

buildscript {
    repositories { mavenCentral() }
    dependencies { classpath("com.guardsquare:proguard-gradle:7.9.1") }
}

plugins {
    application
}

group = "com.tonicbox.dukes8bit"
version = "1.0"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Game ships as a compressed resource (see the proguard task); the Main loader inflates and launches it.
    mainClass = "Main"
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter:5.11.4")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

tasks.test {
    useJUnitPlatform()
    // Constructing Game calls Sound.init(); point the MIDI synth at a name that does not resolve so the synth
    // fails to open and Sound becomes a no-op - otherwise its non-daemon scheduler keeps the test JVM alive.
    systemProperty("javax.sound.midi.Synthesizer", "#none")
    systemProperty("java.awt.headless", "true")
}

tasks.withType<JavaCompile>().configureEach {
    options.release = 25
    options.isDebug = false
    options.encoding = "UTF-8"
    // De-sugar string concatenation to StringBuilder instead of invokedynamic, dropping the BootstrapMethods
    // block + 23 indy sites + the StringConcatFactory handle from the merged class.
    options.compilerArgs.add("-XDstringConcat=inline")
}

// ProGuard minifies in place, so feeding already-minified classes back in would double-minify and drift the
// byte count. Clean-recompile each run to keep the minify input pristine and `size` deterministic.
tasks.named<JavaCompile>("compileJava") {
    outputs.upToDateWhen { false }
    doFirst { destinationDirectory.get().asFile.deleteRecursively() }
}

// The compiled-classes directory the bytecode passes transform and ProGuard later minifies in place.
val classesDir = layout.buildDirectory.dir("classes/java/main").get().asFile

// Runs the build-time bytecode passes (see buildSrc dukes.yabr.BuildPasses) over the freshly compiled classes,
// before the jar and ProGuard:
// - pack each class's constant Color fields into a decoded palette
// - Method Inlining. The inline list comes from inline-allowlist.txt (generated by tools/tune-inline.sh) or -Pinline=Game#a,Renderer#b for one-off experiments.
val allowlistFile = layout.projectDirectory.file("inline-allowlist.txt").asFile
val explicitInline: List<String>? = (findProperty("inline") as String?)
    ?.split(",")?.map { it.trim() }?.filter { it.isNotEmpty() }
val transformClasses = tasks.register("transformClasses") {
    dependsOn("compileJava")
    // The passes (and ProGuard after) mutate build/classes/java/main in place, which is also the test classpath,
    // so let `test` run against the pristine compiled classes first whenever both are in the graph.
    mustRunAfter("test")
    outputs.upToDateWhen { false }
    doLast {
        val allowlist = explicitInline ?: if (allowlistFile.exists())
            allowlistFile.readLines().map { it.trim() }.filter { it.isNotEmpty() && !it.startsWith("//") }
        else emptyList()
        dukes.yabr.BuildPasses.apply(classesDir, allowlist)
    }
}

// Lists every private single-call candidate (on the freshly compiled, pre-transform classes) for the tuner.
tasks.register("listInlineCandidates") {
    dependsOn("compileJava")
    doLast {
        dukes.yabr.inline.MethodInliner.discoverCandidates(classesDir).sorted().forEach { println(it) }
    }
}

// No runtime deps, so the plain jar is already runnable. Force a repackage each run so ProGuard minifies
// freshly-compiled classes rather than re-minifying a previous jar.
tasks.jar {
    archiveBaseName = "DukesDescent"
    manifest { attributes["Main-Class"] = "Main" }
    dependsOn(transformClasses)
    outputs.upToDateWhen { false }
    // Because I'm dumb and break my own builds by having cli open in the libs dir and jar isn't able to remove the directory
    doFirst {
        val jar = archiveFile.get().asFile
        if (jar.exists() && !jar.delete()) {
            throw GradleException("Could not delete a stale ${jar.name} - it is held open by another process "
                + "(a running game window, or a leftover Gradle daemon). Close it and rebuild.")
        }
    }
}

tasks.register<ProGuardTask>("proguard") {
    group = "build"
    description = "Minify in place (shrink + shorten members, keep class names): the jar and compiled classes."
    dependsOn("jar")
    // Always re-run: it overwrites the compile/jar outputs, which would confuse up-to-date checks.
    outputs.upToDateWhen { false }

    val jdk = System.getProperty("java.home")
    val jarFile = layout.buildDirectory.file("libs/DukesDescent-$version.jar").get().asFile
    val tmpJar = layout.buildDirectory.file("tmp/proguard-min.jar").get().asFile

    injars(jarFile)
    outjars(tmpJar)
    libraryjars("$jdk/jmods/java.base.jmod")
    libraryjars("$jdk/jmods/java.desktop.jmod")
    libraryjars("$jdk/jmods/jdk.unsupported.jmod")

    // Main is the launch entry point; Game is reached reflectively, so keep its main() as the shrink root
    // (everything it uses is retained, members still shorten). Both class names are preserved by keepnames.
    keep("public class Main { static void main(); }")
    keep("class Game { static void main(); }")

    // Keep class names readable; members may shorten. Two optimizations are off because they grow this build:
    // unique-method inlining (cascades the program into Main, ~+13 KB) and parameter propagation (~+17 B).
    // 8 passes is where the optimizer converges.
    keepnames("class **")
    overloadaggressively()
    allowaccessmodification()
    optimizationpasses(8)
    optimizations("!class/merging/*,!method/inlining/unique,!method/propagation/*")
    dontwarn()
    dontnote()

    doLast {
        // Replace the compiled classes with ProGuard's minified output (the classes are what the size metric measures).
        classesDir.deleteRecursively()
        copy {
            from(zipTree(tmpJar)) { include("**/*.class") }
            into(classesDir)
        }
        tmpJar.delete()
        // Frame-strip the minified Game, deflate it into the "Game" resource, and drop the .class: the Main
        // loader inflates and defines it at startup. The shipped classes are just Main.
        val resourcesDir = layout.buildDirectory.dir("resources/main").get().asFile
        val gameClass = File(classesDir, "Game.class")
        val gameBlob = File(resourcesDir, "Game")
        val blobBytes = dukes.yabr.pack.ResourcePacker.pack(gameClass, gameBlob)
        // Strip the dead no-arg constructor from the raw-shipped Main loader (it is never instantiated).
        dukes.yabr.pack.LoaderMinifier.minify(File(classesDir, "Main.class"))
        // Repackage the runnable jar to match: the Main loader plus the Game blob, no Game.class. We write the
        // ZIP ourselves (dukes.yabr.pack.JarPacker) so each entry uses OptimalDeflate - which beats the stock
        // Deflater on the class bytes - and the already-compressed Game blob is stored rather than re-deflated.
        val manifestBytes = "Manifest-Version: 1.0\r\nMain-Class: Main\r\n\r\n".toByteArray()
        val jarEntries = mutableListOf(dukes.yabr.pack.JarPacker.Entry("META-INF/MANIFEST.MF", manifestBytes))
        listOf(classesDir, resourcesDir).forEach { root ->
            root.walkTopDown().filter { it.isFile }.forEach { file ->
                jarEntries.add(dukes.yabr.pack.JarPacker.Entry(
                    file.relativeTo(root).invariantSeparatorsPath, file.readBytes()))
            }
        }
        dukes.yabr.pack.JarPacker.write(jarFile, jarEntries)
        val classBytes = classesDir.walkTopDown().filter { it.isFile }.sumOf { it.length() }
        println("Minified -> classes %d B + Game blob %d B (%.2f KB total), jar %d B  %s"
            .format(classBytes, blobBytes, (classBytes + blobBytes) / 1024.0, jarFile.length(), jarFile.name))
    }
}

// Build and run both go through ProGuard, so the jar and the classes that ship/execute are minified.
tasks.named("build") { dependsOn("proguard") }
tasks.named("run") { dependsOn("proguard") }

tasks.register("size") {
    group = "verification"
    description = "Reports total runtime size (minified classes + resources) and the packaged jar size."
    dependsOn("proguard")
    doLast {
        val measured = listOf(
            layout.buildDirectory.dir("classes/java/main").get().asFile,
            layout.buildDirectory.dir("resources/main").get().asFile,
        )
        var totalBytes = 0L
        var fileCount = 0
        measured.filter { it.exists() }.forEach { root ->
            root.walkTopDown().filter { it.isFile }.sortedBy { it.path }.forEach { file ->
                totalBytes += file.length()
                fileCount++
                println("%9d B  %s".format(file.length(), file.relativeTo(root.parentFile)))
            }
        }
        val kilobytes = totalBytes / 1024.0
        println("-".repeat(48))
        println("Files: %d".format(fileCount))
        println("Total: %d B (%.2f KB)".format(totalBytes, kilobytes))

        val jarFile = tasks.named<Jar>("jar").get().archiveFile.get().asFile
        if (jarFile.exists()) {
            println("Jar: %d B (%.2f KB)  %s".format(jarFile.length(), jarFile.length() / 1024.0, jarFile.name))
        }
    }
}
